--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,7 +53,7 @@ header h1 {
 /* Hero Section */
 .hero {
   position: absolute;
-  padding: 30rem 20px;
+  padding: 30rem ;
   margin: auto;
   max-width: 600px;
   display: flex;
