--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,14 +52,9 @@ header h1 {
 
 /* Hero Section */
 .hero {
-  position: absolute;
-  padding: 30rem ;
-  margin: auto;
+  padding: 25rem 20px;
   max-width: 600px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
+ 
 }
 
 .hero h2 {
